force-app/main/default/objects/Address__c/Address__c.object-meta.xml
<CustomObject>
    <label>Address</label>
    <pluralLabel>Addresses</pluralLabel>
    <nameField>
        <label>Address Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
    <description>Member address record for residence, mailing, and service delivery location tracking. Supports multiple addresses per member (e.g., residence vs. mailing).</description>
</CustomObject>