force-app/main/default/objects/Address__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
    <description>Country name.</description>
</CustomField>