force-app/main/default/objects/Address__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <label>Postal Code</label>
    <type>Text</type>
    <length>20</length>
    <required>true</required>
    <description>Postal code, ZIP code, or equivalent.</description>
</CustomField>