force-app/main/default/objects/Address__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>Street</label>
    <type>LongTextArea</type>
    <length>765</length>
    <description>Street address including number, street name, and any apartment or suite information.</description>
</CustomField>